fixing dark mode css transitions

--- a/styles/nearlock-app.module.scss
+++ b/styles/nearlock-app.module.scss
@@ -1,3 +1,5 @@
+$dark-mode-transition: 0.5s;
+
 .nearlock-app {
     color: #535353;
     margin: auto;
@@ -13,7 +15,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    transition: background 0.5s;
+    transition: background $dark-mode-transition, color $dark-mode-transition;
     
     &-modal {
         position: absolute;
@@ -52,6 +54,7 @@
         padding: 6px 14px;
         font-size: 12px;
         color: #303030;
+        transition: background $dark-mode-transition, color $dark-mode-transition;
     }
 
     &__btn-link {
@@ -221,7 +224,7 @@
             color: #000 !important;
             padding: 7px 8px;
             text-decoration: unset !important;
-            transition: color 0.5s;
+            transition: color $dark-mode-transition;
 
             &__disabled {
                 opacity: 0.5;
@@ -247,7 +250,7 @@
         background: #fff;
         flex-grow: 1;
         z-index: 1;
-        transition: background 0.5s;
+        transition: background $dark-mode-transition;
 
         &-header,
         &-header-open {
@@ -258,7 +261,7 @@
             align-items: center;
             padding: 9px 10px;
             border-bottom: 1px solid hsla(0, 0%, 0%, 0.09);
-            transition: all 0.5s;
+            transition: all $dark-mode-transition;
 
             &-open {
                 padding-left: 100px;
@@ -311,7 +314,7 @@
                 font-size: 12px;
                 outline:hsla(0, 0%, 0%, .06) solid 1px;
                 opacity: 1;
-                transition: background 0.5s, width 0.5s, opacity 0.5s;
+                transition: background $dark-mode-transition, width 0.5s, opacity 0.5s;
             }
 
             &__search {
@@ -345,6 +348,7 @@
 
         h5 {
             color: #000000;
+            transition: color $dark-mode-transition;
         }
     }
 
